--- a/index.html
+++ b/index.html
@@ -33,48 +33,35 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link link-scroll" href="#introducere">Introducere</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link link-scroll" href="#alergie">Alergie</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link link-scroll" href="#statistica">Statistică</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link link-scroll" href="#noutati">Noutăți</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" id="login-button" href="#">Conectare</a>
-					</li>
+					<li class="nav-item"><a class="nav-link link-scroll" href="#introducere">Introducere</a></li>
+					<li class="nav-item"><a class="nav-link link-scroll" href="#alergie">Alergie</a></li>
+					<li class="nav-item"><a class="nav-link link-scroll" href="#statistica">Statistică</a></li>
+					<li class="nav-item"><a class="nav-link link-scroll" href="#noutati">Noutăți</a></li>
+					<li class="nav-item"><a class="nav-link link-scroll" href="#echipa">Echipa</a></li>
+					<li class="nav-item"><a class="nav-link" id="login-button" href="#">Conectare</a></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-
 	<div class="page-header page-header-filter" data-parallax="true">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-9 col-xl-6">
 					<h1 class="title">Protejează-te împotriva alergiilor</h1>
-					<h4>Cu ajutorul nostru poți afla ultimele noutăți despre alergiile de orice tip, inclusiv despre simptomele și cauzele acestora.
-						Doar selectezi simptomele și vei primi automat informații!</h4>
+					<h4>Cu ajutorul nostru poți afla ultimele noutăți despre alergiile de orice tip, inclusiv despre simptomele și cauzele acestora. Doar selectezi simptomele și vei primi automat informații!</h4>
 					<br />
 					<a href="#" class="btn-get-started">Înscrie-te acum</a>
 				</div>
 			</div>
 		</div>
 	</div>
-
 	<div class="main">
 		<div class="section" id="introducere">
 			<div class="container text-center">
 				<div class="row">
 					<div class="col-md-9 ml-auto mr-auto">
 						<h2 class="title">Ce reprezintă AllergyHelp?</h2>
-						<h5 class="description">AllergyHelp reprezintă o platformă bazată pe o bază de date a alergiilor ce poate oferi diverse informații despre aceasta.
-							Datorită acestei platforme, aveți acces la următoarele informații:</h5>
+						<h5 class="description">AllergyHelp reprezintă o platformă bazată pe o bază de date a alergiilor ce poate oferi diverse informații despre aceasta. Datorită acestei platforme, aveți acces la următoarele informații:</h5>
 					</div>
 				</div>
 				<div class="row">
@@ -88,7 +75,7 @@
 					<div class="col-md-4">
 						<div class="info">
 							<i class="fa fa-pills text-danger"></i>
-							<h4 class="info-title">Tratemente</h4>
+							<h4 class="info-title">Tratamente</h4>
 							<p>Pentru fiecare alergie oferim și câte un tratament recomandat de doctori și farmaciști.</p>
 						</div>
 					</div>
@@ -117,12 +104,8 @@
 								Ce sunt alergiile?
 							</h3>
 							<p class="card-description">
-								Alergiile reprezintă o reacțe anormală a organismului la particulele pe care le consideră străine. Aceste particule sunt
-								cunoscute drept factori alergeni și pot fi substanțe toxice (produse petrochimice, gaze de eșapament) sau nontoxice
-								(polen, proteinele din lapte de vacă). Persoanele sensibile reacționează la cantități mici din aceste substanțe,
-								care sunt inofensive pentru majoritatea oamenilor.
-								<br />Alergiile sunt boli cronice, care se agravează din când în când și pot evolua și cu exacerbări severe. Prinicipalele
-								manifestări ale alergiilor sunt: strănut, secreție nazală abundentă, lăcrimare excesivă, respirație dificilă.
+								Alergiilie reprezintă o reacțe anormală a organismului la particulele pe care le consideră străine. Aceste particule sunt cunoscute drept factori alergeni și pot fi substanțe toxice (produse petrochimice, gaze de eșapament) sau nontoxice (polen, proteinele din lapte de vacă). Persoanele sensibile reacționează la cantități mici din aceste substanțe, care sunt inofensive pentru majoritatea oamenilor.
+								<br />Alergiile sunt boli cronice, care se agravează din când în când și pot evolua și cu exacerbări severe. Prinicipalele manifestări ale alergiilor sunt: strănut, secreție nazală abundentă, lăcrimare excesivă, respirație dificilă.
 							</p>
 						</div>
 					</div>
@@ -131,21 +114,15 @@
 			<div class="tip">
 				<div class="container">
 					<strong>Bine de știut!</strong>
-					<br /> Alergia este cea mai comună boală cronică din Europa. Până la 20% dintre pacienții cu alergii luptă în fiecare zi cu
-					frica de o posibilă criză de astm, un șoc anafilatic sau chiar moartea de la o reacție alergică.
+					<br /> Alergia este cea mai comună boală cronică din Europa. Până la 20% dintre pacienții cu alergii luptă în fiecare zi cu frica de o posibilă criză de astm, un șoc anafilatic sau chiar moartea de la o reacție alergică.
 				</div>
 			</div>
 		</div>
 		<div class="section section-image" id="statistica" style="background-image: url('assets/img/crowded-station.jpg')">
-			<div id="slides" class="carousel-slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-					<li data-target="#slides" data-slide-to="0" class="active"></li>
-					<li data-target="#slides" data-slide-to="1"></li>
-					<li data-target="#slides" data-slide-to="2"></li>
-				</ol>
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<div class="container text-center">
+			<div class="container text-center">
+				<div class="carousel slide carousel-fade" data-ride="carousel">
+					<div class="carousel-inner">
+						<div class="carousel-item active">
 							<div class="row">
 								<div class="col-md-4">
 									<h3 class="title mb-0">Alergiile</h3>
@@ -157,14 +134,12 @@
 								</div>
 								<div class="col-md-4">
 									<h3 class="title mb-0">Costurile</h3>
-									Anuale ale alergiilor depășește 18 miliarde de dolari.
+									Anuale ale alergiilor depășesc 18 miliarde de dolari.
 								</div>
 							</div>
 						</div>
-					</div>
 
-					<div class="carousel-item">
-						<div class="container text-center">
+						<div class="carousel-item">
 							<div class="row">
 								<div class="col-md-4">
 									<h3 class="title mb-0">Peste 170 de alimente</h3>
@@ -176,14 +151,12 @@
 								</div>
 								<div class="col-md-4">
 									<h3 class="title mb-0">În 2015</h3>
-									Peste 8.8 milioane de copii au avut alergii de pile.
+									Peste 8.8 milioane de copii au avut alergii de piele.
 								</div>
 							</div>
 						</div>
-					</div>
 
-					<div class="carousel-item">
-						<div class="container text-center">
+						<div class="carousel-item">
 							<div class="row">
 								<div class="col-md-4">
 									<h3 class="title mb-0">Studiile arată că</h3>
@@ -194,7 +167,7 @@
 									Sunt peste 33 de milioane de oameni ce au reacții alergice la ambrozie.
 								</div>
 								<div class="col-md-4">
-									<h3 class="title mb-0">În Romania</h3>
+									<h3 class="title mb-0">În România</h3>
 									Numărul alergicilor la ambrozie s-a dublat în ultimii 2-3 ani.
 								</div>
 							</div>
@@ -203,91 +176,130 @@
 				</div>
 			</div>
 		</div>
-	</div>
-
-
-	<div class="carousel-item">
-		<div class="container text-center">
-			<div class="row">
-				<div class="col-md-4">
-					<h3 class="title mb-0">Alergiile</h3>
-					Sunt a șasea cauză a bolilor cronice din USA.
-				</div>
-				<div class="col-md-4">
-					<h3 class="title mb-0">La nivel mondial</h3>
-					Rinita alergică afectează între 10% și 30% din populație.
-				</div>
-				<div class="col-md-4">
-					<h3 class="title mb-0">Costurile</h3>
-					Anuale ale alergiilor depășește 18 miliarde de dolari.
-				</div>
-			</div>
-		</div>
-	</div>
-	</div>
-	<div class="section" id="noutati">
-		<div class="container">
-			<h2 class="title text-center">Noutăți</h2>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="card card-plain">
-						<div class="card-header card-header-image">
-							<img class="img" src="assets/img/rsz_alergia-la-polen.jpg">
-							<div class="colored-shadow" style="background-image: url('assets/img/rsz_alergia-la-polen.jpg'); opacity: 1;"></div>
+		<div class="section" id="noutati">
+			<div class="container">
+				<h2 class="title text-center">Noutăți</h2>
+				<div class="row">
+					<div class="col-md-4">
+						<div class="card card-plain">
+							<div class="card-header card-header-image">
+								<img class="img" src="assets/img/rsz_alergia-la-polen.jpg">
+								<div class="colored-shadow" style="background-image: url('assets/img/rsz_alergia-la-polen.jpg'); opacity: 1;"></div>
+							</div>
+							<h3 class="card-title">
+								Rinita alergică
+							</h3>
+							<p class="card-description">
+								Cel puțin 1 din 10 persoane la nivel mondial suferă de rinită alergică, iar incidența acestei afecțiuni este în creștere, din cauza creșterii expunerii la poluanții atmosferici și utilizării crescute de antibiotice pentru tratarea infecțiilor respiratorii în copilarie.
+							</p>
 						</div>
-						<h3 class="card-title">
-							Rinita alergică
-						</h3>
-						<p class="card-description">
-							Cel puțin 1 din 10 persoane la nivel mondial suferă de rinită alergică, iar incidența acestei afecțiuni este în creștere,
-							din cauza creșterii expunerii la poluanții atmosferici și utilizării crescute de antibiotice pentru tratarea infecțiilor
-							respiratorii în copilarie.
-						</p>
 					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card card-plain">
-						<div class="card-header card-header-image">
-							<img class="img" src="assets/img/astm1.jpg">
-							<div class="colored-shadow" style="background-image: url('assets/img/astm1.jpg'); opacity: 1;"></div>
+					<div class="col-md-4">
+						<div class="card card-plain">
+							<div class="card-header card-header-image">
+								<img class="img" src="assets/img/astm1.jpg">
+								<div class="colored-shadow" style="background-image: url('assets/img/astm1.jpg'); opacity: 1;"></div>
+							</div>
+							<h3 class="card-title">
+								Astmul bronșic
+							</h3>
+							<p class="card-description">
+								Peste 300 de milioane de oameni din întreaga lume sufera de astm bronșic, prevalența acestei boli este în creștere. În România, prevalența astmului este de 4-6%, fiind afectate aproximativ un milion de persoane, din care se estimeaza ca 60% sunt la copii și tineri.
+							</p>
 						</div>
-						<h3 class="card-title">
-							Astmul bronșic
-						</h3>
-						<p class="card-description">
-							Peste 300 de milioane de oameni din întreaga lume sufera de astm bronșic, prevalența acestei boli este în creștere. În România,
-							prevalența astmului este de 4-6%, fiind afectate aproximativ un milion de persoane, din care se estimeaza ca 60% sunt
-							la copii și tineri.
-						</p>
 					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card card-plain">
-						<div class="card-header card-header-image">
-							<img class="img" src="assets/img/rsz_dermatita.jpg">
-							<div class="colored-shadow" style="background-image: url('assets/img/rsz_dermatita.jpg'); opacity: 1;"></div>
+					<div class="col-md-4">
+						<div class="card card-plain">
+							<div class="card-header card-header-image">
+								<img class="img" src="assets/img/rsz_dermatita.jpg">
+								<div class="colored-shadow" style="background-image: url('assets/img/rsz_dermatita.jpg'); opacity: 1;"></div>
+							</div>
+							<h3 class="card-title">
+								Dermatita atopică
+							</h3>
+							<p class="card-description">
+								Eczema este cea mai comună manifestare a bolii atopice. Aceasta apare încă din copilarie și se ameliorează cu vârsta în 80% din cauzuri. Este o afecțiune cutantă inflamatorie, care creează o senzație intensă de mâncărime a pielii.
+							</p>
 						</div>
-						<h3 class="card-title">
-							Dermatita atopică
-						</h3>
-						<p class="card-description">
-							Eczema este cea mai comună manifestare a bolii atopice. Aceasta apare încă din copilarie și se ameliorează cu vârsta în 80%
-							din cauzuri. Este o afecțiune cutantă inflamatorie, care creează o senzație intensă de mâncărime a pielii.
-						</p>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+		<div class="section" id="echipa">
+			<div class="container text-center">
+			<div class="row">
+					<div class="col-md-10 ml-auto mr-auto">
+						<h2 class="title">Echipa Discode</h2>
+						<h5 class="description">Noi suntem <strong>Discode</strong>, o echipă formată din patru elevi de la <strong>Liceul Teoretic de Informatică "Grigore Moisil" Iași</strong>.</h5>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-6 col-md-3">
+						<div class="card card-profile card-plain">
+							<div class="card-header card-avatar">
+								<img class="img" src="assets/img/avatars/2.jpg">
+							</div>
+							<div class="card-body">
+								<h4 class="card-title">Iacob Octavian</h4>
+							</div>
+							<div class="card-footer justify-content-center">
+								<a href="https://www.facebook.com/octavzz" target="_blank" rel="noopener""><i class="fab fa-facebook-square"></i></a>
+								<a href="https://www.instagram.com/octavzz" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+								<a href="https://github.com/Octavzz" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-3">
+						<div class="card card-profile card-plain">
+							<div class="card-header card-avatar">
+								<img class="img" src="assets/img/avatars/4.jpg">
+							</div>
+							<div class="card-body">
+								<h4 class="card-title">Negru Parascheva</h4>
+							</div>
+							<div class="card-footer justify-content-center">
+								<a href="https://www.facebook.com/parascheva.negru" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
+								<a href="https://www.instagram.com/paraschevanegru" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+								<a href="https://github.com/paraschevanegru" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-3">
+						<div class="card card-profile card-plain">
+							<div class="card-header card-avatar">
+								<img class="img" src="assets/img/avatars/3.jpg">
+							</div>
+							<div class="card-body">
+								<h4 class="card-title">Scurtu Claudiu</h4>
+							</div>
+							<div class="card-footer justify-content-center">
+								<a href="https://www.facebook.com/claudiu.scurtu" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
+								<a href="https://www.instagram.com/claudiuscurtu" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+								<a href="https://github.com/isoon5" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-6 col-md-3">
+						<div class="card card-profile card-plain">
+							<div class="card-header card-avatar">
+								<img class="img" src="assets/img/avatars/1.jpg">
+							</div>
+							<div class="card-body">
+								<h4 class="card-title">Toderică Alexandru</h4>
+							</div>
+							<div class="card-footer justify-content-center">
+								<a href="https://www.facebook.com/alexandru.toderica" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a>
+								<a href="https://www.instagram.com/toderrrica" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+								<a href="https://github.com/toderica" target="_blank" rel="noopener"><i class="fab fa-github"></i></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<footer class="text-center m-2">
-		<small>
-			Realizat pentru
-			<strong>
-				<a href="https://fiicode.asii.ro/" target="_blank" rel="noopener">FIICode 2018</a>
-			</strong> de către echipa
-			<strong>Discode</strong>.
-		</small>
+		<small>Realizat pentru <strong><a href="https://fiicode.asii.ro/" target="_blank" rel="noopener">FIICode 2018</a></strong> de către echipa <strong>Discode</strong>.</small>
 	</footer>
 </body>
 
